Fix gateway CORS configuration